[gd_scene load_steps=6 format=2]

[ext_resource path="res://SnakeHead.tscn" type="PackedScene" id=1]
[ext_resource path="res://CandySpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://GameOverScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GameOverScreen" parent="HUD" instance=ExtResource( 4 )]
visible = false

[node name="MainMenu" parent="HUD" instance=ExtResource( 5 )]

[node name="SnakeParts" type="Node2D" parent="."]

[node name="CandySpawner" parent="." instance=ExtResource( 2 )]

[node name="Snake" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 256 )
